[gd_scene load_steps=10 format=2]

[ext_resource path="res://tileset.tres" type="TileSet" id=1]
[ext_resource path="res://characters/bastien.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/exit.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/adeline.tscn" type="PackedScene" id=4]
[ext_resource path="res://characters/lucille.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Background/backgroundColorDesert.png" type="Texture" id=6]
[ext_resource path="res://levels/desert/level-0.gd" type="Script" id=7]
[ext_resource path="res://objects/button.tscn" type="PackedScene" id=8]
[ext_resource path="res://objects/object-source.tscn" type="PackedScene" id=10]

[node name="Level-0" type="Node2D"]
script = ExtResource( 7 )

[node name="BackgroundColorDesert" type="Sprite" parent="."]
position = Vector2( 235, 166 )
scale = Vector2( 0.712891, 0.712891 )
texture = ExtResource( 6 )

[node name="ObjectSource" parent="." instance=ExtResource( 10 )]
position = Vector2( 171, 92 )

[node name="ObjectSource2" parent="." instance=ExtResource( 10 )]
position = Vector2( 279, 146 )

[node name="ObjectSource3" parent="." instance=ExtResource( 10 )]
position = Vector2( 387, 57 )
probability = 0.75

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 18, 18 )
format = 1
tile_data = PoolIntArray( 15, 0, 131073, 16, 0, 131074, 17, 0, 131074, 18, 0, 131074, 19, 0, 131074, 20, 0, 131075, 65543, 0, 131072, 65546, 0, 131073, 65547, 0, 131074, 65548, 0, 131075, 65555, 0, 327693, 65556, 0, 393229, 65557, 0, 262158, 131082, 0, 262157, 131083, 0, 327694, 131089, 0, 131072, 131093, 0, 393231, 131095, 0, 131073, 131096, 0, 131075, 196609, 0, 458765, 196610, 0, 458766, 196611, 0, 458767, 196617, 0, 262157, 196618, 0, 327694, 196621, 0, 393223, 262153, 0, 393231, 262156, 0, 131073, 262157, 0, 131074, 262158, 0, 131074, 262159, 0, 131074, 262160, 0, 131075, 262169, 0, 458765, 262170, 0, 458767, 327694, 0, 327695, 393230, 0, 327693, 393231, 0, 262158, 458754, 0, 14, 458755, 0, 12, 458756, 0, 15, 458767, 0, 393231, 524291, 0, 131084, 589825, 0, 14, 589826, 0, 12, 589827, 0, 15, 589842, 0, 458759, 655362, 0, 131084, 655363, 0, 131084, 720898, 0, 131084, 720899, 0, 131084, 786434, 0, 131084, 786435, 0, 131084, 851970, 0, 196620, 851971, 0, 196620, 851974, 0, 393223, 851980, 0, 262149, 851986, 0, 262149, 851991, 0, 393223, 917504, 0, 196610, 917505, 0, 196610, 917506, 0, 196610, 917507, 0, 196610, 917508, 0, 196610, 917509, 0, 196610, 917510, 0, 196610, 917511, 0, 196611, 917512, 0, 131085, 917513, 0, 131085, 917514, 0, 131085, 917515, 0, 196609, 917516, 0, 196610, 917517, 0, 196611, 917518, 0, 131085, 917519, 0, 131085, 917520, 0, 131085, 917521, 0, 196609, 917522, 0, 196610, 917523, 0, 196611, 917524, 0, 131085, 917525, 0, 131085, 917526, 0, 131085, 917527, 0, 196609, 917528, 0, 196610, 917529, 0, 196610, 917530, 0, 196610 )

[node name="Button" parent="." instance=ExtResource( 8 )]
position = Vector2( 333, 181 )
rotation = 3.14159

[node name="Adeline" parent="." instance=ExtResource( 4 )]
position = Vector2( 17, 241 )

[node name="Lucille" parent="." instance=ExtResource( 5 )]
position = Vector2( 44, 241 )

[node name="Bastien" parent="." instance=ExtResource( 2 )]
position = Vector2( 72, 241 )

[node name="Exit" parent="." instance=ExtResource( 3 )]
position = Vector2( 458, 243 )
